# code-names-bot-scenario-generator

./: README.md  config.py  pyproject.toml
code_names_bot_scenario_generator/: confirmer.py
data/: scenarios.yaml
data/guesses/: nalu  nalu original
data/scenarios/: custom_scenarios.yaml  scenarios_1.yaml  scenarios_2.yaml
